k8s/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  # namespace: cert
  annotations:
    # cert-manager.io/issuer: my-ca-issuer
    # cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    # cert-manager.io/common-name: my-todotracker.com
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: gce
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # tls:
  #   - hosts:
  #       - my-todotracker.com
  #     secretName: my-ingress-cert
  rules:
    # - host: my-todotracker.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 5050
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
